# mcp-toolbox-duckdb-demo

./: .env.example  .gitignore  Makefile  NOTES.md  README.md  docker-compose.yaml  tools.yaml
.github/workflows/: smoke.yml
claude-code/: CLAUDE.example.md  claude_config.example.json
cube/: codegen.yml  gen_toolbox_from_cube.py
cube/model/cubes/: orders.yml  sales.yml
dagster/: .dockerignore  Dockerfile  definitions.py  dlt_pipeline.py  entrypoint.sh
dagster/dbt_project/: dbt_project.yml  profiles.yml
dagster/dbt_project/models/: daily_traffic.sql  schema.yml  sources.yml  stg_events.sql  top_pages_30d.sql
grafana/provisioning/datasources/: prometheus.yml
langgraph/: Dockerfile  app.py  pyproject.toml
notebooks/: walkthrough.ipynb
ontology/: bindings.yaml  gen_ontology.py  glossary.yaml
ontology/entities/: customer.yaml  order.yaml  product.yaml  web_session.yaml
otel-collector/: config.yaml
pi/: pi_config.example.json
prometheus/: prometheus.yml
quack-server/: .dockerignore  Dockerfile  entrypoint.sh  gen_price_history.py  init-engineered.sql.tmpl  init.sql.tmpl  product_price_history.parquet  seed-inventory.sql  seed-ontology.sql  seed.sql
superset/: bootstrap.py  bootstrap.sh  screenshot.py  superset_config.py
trace-client/: Dockerfile  app.py  load_test.py  pyproject.toml
