[project]
name = "mcp-toolbox-duckdb-langgraph-demo"
version = "0.0.1"
description = "LangGraph demo agent for the MCP Toolbox DuckDB/Quack adapter."
requires-python = ">=3.11"
dependencies = [
    "toolbox-langchain>=0.4.0",
    "langgraph>=0.6.0",
    "langchain-anthropic>=0.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
