[project]
name = "trace-client"
version = "0.0.1"
description = "Minimal OTel-instrumented client that calls the duckdb-quack Toolbox tool to demonstrate distributed-trace stitching across services."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-requests>=0.48b0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "load_test"]
